{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 349,
  "lineage": "d038ae19-4b8c-9bb2-31eb-b621bed1530d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-4fffc834",
            "arn": "arn:aws:ec2:us-east-1:881417320885:instance/i-0f34a1c3c4587bbac",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f34a1c3c4587bbac",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "tvp25222-keypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-02ec603963819480b",
            "private_dns": "ip-10-0-2-74.ec2.internal",
            "private_ip": "10.0.2.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-08b90133f6c6b8655",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-006ed4e1f362d7a65",
            "tags": {
              "Name": "Motor Aclaraciones database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d9b5d1493b443a45"
            ]
          },
          "depends_on": [
            "aws_key_pair.default",
            "aws_security_group.sg_private",
            "aws_subnet.private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-4fffc834",
            "arn": "arn:aws:ec2:us-east-1:881417320885:instance/i-033333f3595d323db",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-033333f3595d323db",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "tvp25222-keypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-090a1acac86b22c28",
            "private_dns": "ip-10-0-1-19.ec2.internal",
            "private_ip": "10.0.1.19",
            "public_dns": "ec2-34-203-190-31.compute-1.amazonaws.com",
            "public_ip": "34.203.190.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-035b3475309928be7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-03b8f5dc2b7b9eb5e",
            "tags": {
              "Name": "Motor Aclaraciones webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-027d77e7141b33cdc"
            ]
          },
          "depends_on": [
            "aws_key_pair.default",
            "aws_security_group.sg_public",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-033f2cc1a869298f7",
            "owner_id": "881417320885",
            "tags": {
              "Name": "Motor Aclaraciones VPC IGW"
            },
            "vpc_id": "vpc-0223abbe8fc0c5f6d"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a7f0f3b34a6b5339",
            "owner_id": "881417320885",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-033f2cc1a869298f7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Motor Aclaraciones Public Subnet RT"
            },
            "vpc_id": "vpc-0223abbe8fc0c5f6d"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be6966c54d83ea08",
            "route_table_id": "rtb-0a7f0f3b34a6b5339",
            "subnet_id": "subnet-03b8f5dc2b7b9eb5e"
          },
          "depends_on": [
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881417320885:security-group/sg-0d9b5d1493b443a45",
            "description": "Allow traffic from public subnet",
            "egress": [],
            "id": "sg-0d9b5d1493b443a45",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tvp25222-sg_private",
            "name_prefix": null,
            "owner_id": "881417320885",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Motor Aclaraciones DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0223abbe8fc0c5f6d"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881417320885:security-group/sg-027d77e7141b33cdc",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-027d77e7141b33cdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tvp25222-sg_public",
            "name_prefix": null,
            "owner_id": "881417320885",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Motor Aclaraciones  Web Server SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0223abbe8fc0c5f6d"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881417320885:subnet/subnet-006ed4e1f362d7a65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-006ed4e1f362d7a65",
            "map_public_ip_on_launch": false,
            "owner_id": "881417320885",
            "tags": {
              "Name": "Motor Aclaraciones Database Private Subnet"
            },
            "vpc_id": "vpc-0223abbe8fc0c5f6d"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881417320885:subnet/subnet-03b8f5dc2b7b9eb5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03b8f5dc2b7b9eb5e",
            "map_public_ip_on_launch": false,
            "owner_id": "881417320885",
            "tags": {
              "Name": "Motor Aclaraciones Web Public Subnet"
            },
            "vpc_id": "vpc-0223abbe8fc0c5f6d"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881417320885:vpc/vpc-0223abbe8fc0c5f6d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c55462a4c590726d",
            "default_route_table_id": "rtb-00ef3d609faf2f19e",
            "default_security_group_id": "sg-0b3c90daabb4515c7",
            "dhcp_options_id": "dopt-4fc5fd34",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0223abbe8fc0c5f6d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00ef3d609faf2f19e",
            "owner_id": "881417320885",
            "tags": {
              "Name": "Motor Aclaraciones test-vpc"
            }
          }
        }
      ]
    }
  ]
}